--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "autosource",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Command Line Application For Auto Compiling Source Material",
   "main": "index.js",
   "preferGlobal": true,
   "bin": {
     "autosource": "./index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jarvon/AutoSource.git"
   },
   "author": "JarVon Designs",
   "license": "ISC",
