--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autosource",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Command Line Application For Auto Compiling Source Material",
   "main": "index.js",
   "preferGlobal": true,
@@ -18,6 +18,9 @@
     "colors": "^1.3.2",
     "commander": "^2.19.0",
     "extract-zip": "^1.6.7",
+    "inquirer": "^6.2.0",
+    "moment": "^2.22.2",
+    "mysql": "^2.16.0",
     "recursive-copy": "^2.0.9"
   }
 }
